--- a/scss/layout/_projects.scss
+++ b/scss/layout/_projects.scss
@@ -6,6 +6,12 @@
         // max-width: 25rem;
         // margin-left: auto;
         // margin-right: auto;
+        .project-wrapper {
+            flex-direction: row-reverse;
+        }
+        .project-wrapper div:first-child {
+            order: 2;
+        }
         margin-bottom: 1.5rem;
         background-color: $white;
         .portfolio-caption {
